[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.2.3"

[workspace.dependencies]
log = { version = "^0.4" }
pretty_env_logger = "^0.5"
thiserror = "^1.0"
futures-test = "^0.3"
futures = "^0.3"
rand = { version = "^0.8", features = ["getrandom"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
bytes = "^1.5"
ethnum = "1.5.0"
sha3 = "^0.10"
regex = "^1.10"
quote = "^1"
proc-macro2 = "^1"
heck = "^0.5"
anyhow = "^1"
syn = "=2.0.72"
quickcheck = "1.0"
paste = "1.0"
num-integer = { version = "0.1" }
num-traits = { version = "0.2" }
serde-big-array = { version = "0.5" }
async-trait = "^0.1"
concat-idents = "^1"
hmac = { version = "^0.12" }
scrypt = { version = "^0.11", default-features = false }
aes = { version = "0.8.2" }
ctr = { version = "0.9.2" }
digest = { version = "0.10.6" }
pbkdf2 = { version = "^0.12" }
k256 = { version = "^0.13" }
elliptic-curve = "^0.13"
sha2 = { version = "0.10.6" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
ecdsa = { version = "^0.16" }
termcolor = "^1.4"
const-oid = "0.9.6"
der = { version = "^0.7" }
p256 = "^0.13"
p384 = "^0.13"
p521 = "^0.13"
zeroize = "1.7.0"
pkcs1 = "0.7.5"
sec1 = "0.7.3"
rsa = "^0.9"
x509-cert = "0.2.5"
generic-array = "^1.1"
uint = "^0.9"
protobuf-json-mapping = "3.5.0"
libc = "^0.2"
bs58 = "0.5.1"
# rasi
rasi = { version = "^0.2" }
rasi-spec = { version = "^0.2" }
rasi-mio = { version = "^0.2" }
ringbuf-rs = { version = "^0.2" }
# futures
futures-boring = { version = "^0.2" }
futures-map = { version = "^0.2" }
futures-http = { version = "^0.2" }
futures-jsonrpcv2 = { version = "^0.2" }
futures-quic = { version = "^0.2" }
futures-yamux = { version = "^0.2" }
futures-dns = { version = "^0.2" }
#reweb3
reweb3 = { path = "crates/reweb3", version = "^0.2" }
reweb3-num = { path = "crates/num", version = "^0.2" }
reweb3-macros = { path = "crates/macros", version = "^0.2" }
ethbind = { path = "crates/bind", version = "^0.2" }
